--- a/src/components/RequirementDisplay/PresetsModal/styles.module.css
+++ b/src/components/RequirementDisplay/PresetsModal/styles.module.css
@@ -2,3 +2,7 @@
   composes: button from global;
   /* composes: is-medium from global; */
 }
+
+.modal {
+  width: 30rem;
+}
